# featrs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  clippy.toml
.github/workflows/: ci.yml  release.yml
examples/: scaling_pipeline.rs
src/: lib.rs  util.rs
src/feature_selection/: mod.rs  select_kbest.rs  variance_threshold.rs
src/pipeline/: column_transformer.rs  mod.rs
src/preprocessing/: auto_type.rs  binarizer.rs  encoder.rs  feature_hasher.rs  imputer.rs  interaction_features.rs  missing_indicator.rs  mod.rs  normalizer.rs  polynomial_features.rs  quantile_transformer.rs  scaler.rs
src/time_series/: cyclical.rs  diff.rs  lag.rs  mod.rs  rolling.rs
src/traits/: missing_indicator.rs  mod.rs
tests/: integration.rs  time_series_integration.rs
