[package]
name = "featrs"
version = "0.1.0"
edition = "2024"
description = "Feature engineering library for Rust, inspired by scikit-learn"
authors = ["Aditya Vikram Mahendru"]
license = "MIT"
repository = "https://github.com/anomalyco/featrs"
documentation = "https://docs.rs/featrs"
keywords = ["feature-engineering", "machine-learning", "preprocessing", "scikit-learn"]
categories = ["science", "data-structures"]

[dependencies]
ndarray = "0.16"
ndarray-stats = "0.6"
serde = { version = "1", features = ["derive"], optional = true }
thiserror = "2"

[dev-dependencies]
approx = "0.5"

[features]
default = ["serde"]
serialization = ["serde"]

[lib]
name = "featrs"
path = "src/lib.rs"
